--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,7 @@
 }
 
 body {
-  font-family: "Oswald", sans-serif !important;
+  font-family: "CircularStd-book", sans-serif !important;
+  font-weight: 500 !important;
+  font-size: 20px !important;
 }
