--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,31 @@
 }
 
 body {
-  font-family: Arial !important;
+  font-family: "Trade Gothic W01 Light", Helvetica, Verdana, sans-serif !important;
   font-weight: 500 !important;
   font-size: 17px !important;
   background: var(--mainwhite) !important;
   color: #333333 !important;
 }
 .text-purple {
+  color: var(--mainColor);
+}
+.btn-black {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: black;
+  border-radius: 0 !important;
+  border: 0.1rem solid black !important;
+}
+
+.btn-black:hover {
+  background: #333333;
+  color: var(--mainwhite);
+}
+
+.cart-icon {
+  cursor: pointer;
+  font-size: 1.2rem;
   color: var(--mainColor);
 }
