--- a/src/style.css
+++ b/src/style.css
@@ -176,10 +176,10 @@ img {
   background-repeat: no-repeat; }
 
 .bg-image-down {
-    background-image: url(./down.jpg);}
+    background-image: url(./undraw_influencer_d3xx.svg);}
 
 .bg-image-header {
-  background-image: url(./hero-1.jpg);}
+  background-image: url(./undraw_zoom_in_1txs.svg);}
 
 .ft-border {
   border-top: 1px solid #8c8c8c; }
