added logo, banner and kismet couture

--- a/src/style.css
+++ b/src/style.css
@@ -176,10 +176,11 @@ img {
   background-repeat: no-repeat; }
 
 .bg-image-down {
-    background-image: url(./undraw_influencer_d3xx.svg);}
+  background-image: url(./undraw_zoom_in_1txs.png);}
+
 
 .bg-image-header {
-  background-image: url(./undraw_zoom_in_1txs.svg);}
+  background-image: url(./undraw_zoom_in_1txs.png);}
 
 .ft-border {
   border-top: 1px solid #8c8c8c; }
